--- a/app/pre-dev.html
+++ b/app/pre-dev.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
     <title></title>
     <link href='css/main.css' rel='stylesheet' type='text/css'>
 </head>
